--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -17,9 +17,9 @@
 }
 
 // Carrusel
-.carousel-inner {
-    img {
-        max-height: 500px; 
-        object-fit: cover; 
-    }
+
+.carousel-inner img {
+    width: 100%;
+    height: 500px; /* O la altura que prefieras */
+    object-fit: cover;
 }
